--- a/wisdom-activiti-sample/pom.xml
+++ b/wisdom-activiti-sample/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>activiti</artifactId>
     <groupId>org.wisdom-framework</groupId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
