--- a/wisdom-activiti/pom.xml
+++ b/wisdom-activiti/pom.xml
@@ -26,7 +26,7 @@
   <parent>
     <groupId>org.wisdom-framework</groupId>
     <artifactId>activiti</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4</version>
   </parent>
 
   <groupId>org.wisdom-framework.activiti</groupId>
